--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="banner-content">
                 <h1 class="banner-subtitle">Best Gift For Best Friend</h1>
                 <h2 class="banner-title">GIFTSET</h2>
-                <img src="photoes/pr0018.png" alt="">
+                <img src="photoes/pr-0018-r.png" alt="">
                 <div class="banner-price">285.000</div>
                 <h3>Giftset "Cà phê phin Viêt Nam"</h3>
                 <p class="banner-text">
